--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+body,input{
     font-family: Ubuntu;
     font-style: normal;
     font-weight: normal;
@@ -20,4 +20,45 @@ body{
     background: #B1C88B;
     margin: 1rem 1rem;
     padding: 2rem;
+}
+
+button{
+    background: #B1C88B;
+    padding: 1rem 2rem;
+    margin: 0.5rem;
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 19px;
+    text-align: center;
+    color: #000000;
+
+}
+.goal,.priritize-goal,.task{
+    background: #7ECA8F;
+    margin: 1rem;
+    padding: 1rem 3rem;
+}
+input{
+    background: #C4C4C4;
+    line-height: 3rem;
+    width: 80%;
+    margin: 1rem;
+}
+.task{
+    background: #98B5E1;
+}
+
+#notes{
+    background: rgba(241, 248, 203, 0.87);
+    min-height: 6rem;
+    margin: 2rem;
+    font-size: 13px;
+    line-height: 15px;
+    padding: 20px;
+}
+
+#convert-into-goal{
+    background: #D4B6F1;   
 }
