--- a/side-nav-style.css
+++ b/side-nav-style.css
@@ -34,6 +34,7 @@
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
+    padding: 3rem;
   }
   
   /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
